[project]
name = "nlm-ingestor-fixed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.9"
dependencies = [
    "bs4>=0.0.2",
    "flask>=3.1.1",
    "flask-jsonpify>=1.5.0",
    "flask-restful>=0.3.10",
    "gunicorn>=23.0.0",
    "lxml==4.9.1",
    "mistune==2.0.3",
    "nlm-utils>=0.1.2",
    "nltk>=3.6.2",
    "numpy>=1.24.4",
    "pandas>=1.2.4",
    "python-magic>=0.4.22",
    "symspellpy>=6.7.0",
    "tika>=3.1.0",
    "tqdm>=4.67.1",
    "unidecode>=1.4.0",
    "werkzeug>=3.1.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
