[project]
name = "nlm-ingestor-fixed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
  "bs4>=0.0.2",
  "flask>=3.1.1",
  "flask-jsonpify>=1.5.0",
  "flask-restful>=0.3.10",
  "gunicorn>=23.0.0",
  "lxml==4.9.1",
  "mistune==2.0.3",
  "nlm-utils>=0.1.2",
  "nltk>=3.6.2",
  "numpy>=1.24.4",
  "pandas>=1.2.4",
  "python-magic>=0.4.22",
  "symspellpy>=6.7.0",
  "tika>=3.1.0",
  "tqdm>=4.67.1",
  "unidecode>=1.4.0",
  "werkzeug>=3.1.3",
]

[dependency-groups]
dev = ["httpx>=0.28.1", "pdfplumber>=0.11.7", "pytest>=8.3.5"]

[tool.uv.sources]
nlm-utils = { path = "whl/nlm_utils-0.1.6-py3-none-any.whl" }

[tool.black]
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
